
* ``addCleanup`` can now only be called during a test run.
  (Jonathan Lange)

* ``TestCase`` objects can now be run twice. All internal state is reset
  between runs.  (Jonathan Lange)

* Make ``fixtures`` a real dependency, not just a test dependency.
  (Jonathan Lange)

* ``testtools.deferredruntest.run_with_log_observers`` is deprecated.
  (Jonathan Lange)


1.8.1
~~~~~

Improvements
------------

* Documented more explicitly how to build and install testtools in the hacking
  documentation. (Thomi Richards)

* ``deferredruntest`` now works with Twisted 15.1.0 and later.
  (Colin Watson, #1488710)

1.8.0
~~~~~

Improvements
------------

* AsynchronousDeferredRunTest now correctly attaches the test log.
  Previously it attached an empty file. (Colin Watson)

1.7.1
~~~~~

Improvements
------------

* Building a wheel on Python 3 was missing ``_compat2x.py`` needed for Python2.
  This was a side effect of the fix to bug #941958, where we fixed a cosmetic
  error. (Robert Collins, #1430534)

* During reporting in ``TextTestResult`` now always uses ``ceil`` rather than
  depending on the undefined rounding behaviour in string formatting.
  (Robert Collins)

1.7.0
~~~~~

Improvements
------------

* Empty attachments to tests were triggering a file payload of None in the
  ``ExtendedToStreamDecorator`` code, which caused multiple copies of
  attachments that had been output prior to the empty one.
  (Robert Collins, #1378609)

1.6.1
~~~~~

Changes
-------

* Fix installing when ``extras`` is not already installed. Our guards
  for the absence of unittest2 were not sufficient.
  (Robert Collins, #1430076)

1.6.0
~~~~~

Improvements
------------

* ``testtools.run`` now accepts ``--locals`` to show local variables
  in tracebacks, which can be a significant aid in debugging. In doing
  so we've removed the code reimplementing linecache and traceback by
  using the new traceback2 and linecache2 packages.
  (Robert Collins, github #111)

Changes
-------
