@@ -23,6 +23,10 @@ Changes
 * ``testtools.deferredruntest.run_with_log_observers`` is deprecated.
   (Jonathan Lange)
 
+* ``AsynchronousDeferredRunTest`` now has ``suppress_twisted_logging`` and
+  ``store_twisted_logs`` parameters that can be used to override the default
+  logging behaviour.  (Jonathan Lange, #942785)
+
 
 1.8.1
 ~~~~~
